# crewai

./: .env.example  .gitignore  README.md  pyproject.toml
src/sensorcore_crew/: crew.py  main.py
src/sensorcore_crew/config/: agents.yaml  tasks.yaml
src/sensorcore_crew/tools/: __init__.py
